--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -2,6 +2,8 @@
 .cart-container-div{width:90%;margin:0 auto;}
 .cart-note-head p{font-weight:500;font-family:'Raleway';}
 .cart-note-head p span{font-family:'Inter';color:#000;}
+.empty-cart-container p{display:flex;flex-direction:column;gap:15px 0;}
+.empty-cart-container p i{font-size:5rem;}
 .cart-product-container{margin:20px 0;}
 .cart-product-container{display:flex;gap:0 20px;}
 .cart-products-div{width:100%;}
