--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,3 +1,14 @@
+.fixed-container{left:0;right:0;background-color:#db4444;z-index:1;}
+.fixed-container{position:fixed;width:100%;}
+.fixed-body{padding:20px 0;position:relative;color:#fff;}
+.fixed-body p{text-align:center;font-size:1rem;font-family:'Inter';}
+.fixed-body p span{font-weight:600;}
+.header-container.padding{padding-top:50px;}
+.fixed-container{animation:animate .2s forwards ease-in-out;}
+@keyframes animate{
+    0%{top:-100px;}
+    100%{top:0px;}
+}
 .header{background-color:#000;padding:10px 0px;}
 .headnote{display:flex;align-items:center;justify-content:center;}
 .headnote p{color:#fafafa;text-align:center;display:flex;align-items:center;justify-content:center;font-size:.85rem;}
