--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,10 +5,6 @@
 .fixed-body p span{font-weight:600;}
 .header-container.padding{padding-top:50px;}
 .fixed-container{animation:animate .2s forwards ease-in-out;}
-@keyframes animate{
-    0%{top:-100px;}
-    100%{top:0px;}
-}
 .header{background-color:#000;padding:10px 0px;}
 .headnote{display:flex;align-items:center;justify-content:center;}
 .headnote p{color:#fafafa;text-align:center;display:flex;align-items:center;justify-content:center;font-size:.85rem;}
@@ -67,4 +63,11 @@
     .header{padding:10px;}
     .headnote{flex-direction:column;}
     .headnote p{display:block;}
+    .menu-icon-header ul{gap:0 20px;}
+    .menu-icon-header ul li button i{font-size:1.7rem;}
+}
+
+@keyframes animate{
+    0%{top:-100px;}
+    100%{top:0px;}
 }
