--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -55,6 +55,12 @@
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </li>
+              <li *ngIf="displayAccount">
+                <button [routerLink]="'home'">
+                  <!-- <span  *ngIf="cartNumber > 0">{{cartNumber}}</span> -->
+                  <i class="fa-solid fa-user"></i>
+                </button>
+              </li>
             </ul>
           </div>
         </div>
