--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -115,4 +115,6 @@
     .side-menu.display{display:block;}
     .flex-products{gap:35px 10px;grid-template-columns:repeat(auto-fill,minmax(calc(250px / 2),1fr));}
     /* .add-to-cart-btn{visibility:visible;} */
+    /* .quantity-btn-container button{font-size:.85rem;padding:3px 6px;}
+    .add-to-cart-btn{font-size:.85rem;padding:8px 0;} */
 }
