--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -45,7 +45,7 @@
                                 <div class="cart-quantity-btn">
                                     <div class="quantity-btn">
                                         <button 
-                                        (click)="decreaseQuantity(cart)"
+                                        (click)="decreaseQuantity(cart,cartContainer)"
                                         [disabled]="cart.quantity === 1" 
                                         [ngClass]="cart.quantity === 1 ? 'disabled' : ''"
                                         [ngStyle]="{backgroundColor: cart.quantity > 1 ? '#db4444' : ''}"><i class="fa-solid fa-minus"></i></button>
