--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -88,7 +88,7 @@
                                 </div>
                                 <button class="add-to-cart-btn" (click)="addToCart(productContainer,product)">Add To Cart</button>
                                 <div class="quantity-btn-container" #quantity [attr.cart-id]="product.id" *ngIf="product.quantity >= 0">
-                                    <button (click)="decreaseCartQuantity(product)"><i class="fa-solid fa-minus"></i></button>
+                                    <button (click)="decreaseCartQuantity(product,productContainer)"><i class="fa-solid fa-minus"></i></button>
                                     <span [attr.quantity-id]="product.id">{{ product.quantity }}</span>
                                     <button (click)="increaseCartQuantity(product)"><i class="fa-solid fa-plus"></i></button>
                                 </div>
@@ -165,7 +165,7 @@
                                     </div>
                                     <button class="add-to-cart-btn" (click)="addToCart(productContainer,product)">Add To Cart</button>
                                     <div class="quantity-btn-container" #quantity [attr.cart-id]="product.id">
-                                        <button (click)="decreaseCartQuantity(product)"><i class="fa-solid fa-minus"></i></button>
+                                        <button (click)="decreaseCartQuantity(product,productContainer)"><i class="fa-solid fa-minus"></i></button>
                                         <span [attr.quantity-id]="product.id">{{product.quantity}}</span>
                                         <button (click)="increaseCartQuantity(product)"><i class="fa-solid fa-plus"></i></button>
                                     </div>
