--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -37,11 +37,6 @@
 .quantity-btn button i{color:#fff;font-size:.9rem;}
 .quantity-btn span{font-family:'Inter';font-weight:500;font-size:.9rem;color:#000;}
 .quantity-btn button.disabled{box-shadow:none;}
-
-
-
-
-
 .empty-cart-container{margin-top:50px;}
 .empty-cart-container p{font-weight:600;text-align:center;font-size:3rem;}
 .cart-total-container{width:45%;}
@@ -60,3 +55,20 @@
 .input-coupon :is(input,button){font-family:'Inter';border:none;font-size:.9rem;}
 .input-coupon button{background-color:#db4444;color:#fff;font-weight:500;padding:15px 30px;border-radius:0 4px 4px 0;font-size:.9rem;}
 .input-coupon input{width:100%;border-radius:4px 0 0 4px;background-color:#f5f5f5;color:#808080;padding:15px 10px;}
+
+@media screen and (max-width:768px) {
+    .cart-product-container{flex-direction:column;gap:20px 0;}
+    .cart-total-container{width:100%;}
+    .sticky-cart-total{position:relative;}
+    .cart-products-col{padding:5px 10px;gap:10px 0;}
+    .cart-description{flex-direction:column;gap:5px 0;align-items:normal;}
+    .cart-quantity{flex-direction:row-reverse;padding:0 15px 0 0;width:100%;}
+    .cart-product{padding:10px 0;gap:0 15px;}
+    .quantity-btn{justify-content:initial;}
+    .cart-rating ul li i{font-size:.8rem;}
+    .cart-rating p{font-size:.9rem;}
+    .cart-rating{align-items:center;}
+    .cart-rating ul{gap:0 2px;}
+    .cart-name-card{gap:1px 0;}
+    .quantity-btn span{font-size:1rem;}
+}
