--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -33,17 +33,16 @@
 .image-slideshow:nth-child(1){animation-delay:0s;}
 .image-slideshow:nth-child(2){animation-delay:4s;}
 .image-slideshow:nth-child(3){animation-delay:8s;}
-
-.flashsale-container{width:90%;margin:50px auto 0;}
-.container :is(.today-container *,.category-head *,.selling-head *){color:#db4444;}
-.container :is(.today-container,.category-head,.selling-head){display:flex;align-items:center;gap:0 20px;}
-.container :is(.today-box,.category-box,.selling-box){width:20px;height:40px;border-radius:4px;background-color:#db4444;}
-.container :is(.today-container span,.category-head span,.selling-head span){font-weight:600;}
-.container :is(.flashsale-header *,.browse-category *,.selling-product *){color:#000;}
-.container :is(.browse-category,.selling-product){margin-top:20px;gap:0 20px;align-items:start;}
+.product-flex-container{width:90%;margin:50px auto 0;}
+.container :is(.product-head *){color:#db4444;}
+.container :is(.product-head){display:flex;align-items:center;gap:0 20px;}
+.container :is(.product-box){width:20px;height:40px;border-radius:4px;background-color:#db4444;}
+.container :is(.product-head span){font-weight:600;}
+.container :is(.product-header *){color:#000;}
+.container :is(.product-header){margin-top:20px;gap:0 20px;align-items:start;}
 .flashsale-header{align-items:end;margin-top:20px;gap:0 20px;}
-.container :is(.flashsale-header span,.browse-category span,.selling-product span){font-weight:600;font-size:1.8rem;font-family:'Inter';}
-.container :is(.flashsale-header,.browse-category,.selling-product){display:flex;}
+.container :is(.product-header span){font-weight:600;font-size:1.8rem;font-family:'Inter';}
+.container :is(.product-header){display:flex;}
 .time-countdown{display:flex;gap:0 10px;align-items:end;}
 .time-countdown div p{list-style:none;}
 .time-countdown div p:first-child{font-size:.7rem;}
@@ -78,7 +77,6 @@
 .product-image-card{position:relative;}
 .product-image-card:hover .add-to-cart-btn{visibility:visible;}
 .add-to-cart-btn{position:absolute;bottom:0;border:none;cursor:pointer;}
-.category-container{margin:70px auto;width:90%;}
 .category-flex{margin:50px 0 0;}
 .category-flex ul{display:grid;gap:20px;grid-template-columns:repeat(auto-fill,minmax(120px,1fr));}
 .category-flex ul li{padding:20px;border:1px solid #b3b3b3;border-radius:4px;list-style:none;width:100%;aspect-ratio:1;}
@@ -87,16 +85,20 @@
 .category-flex ul li i{font-size:2rem;}
 .category-flex ul li:first-child{background-color:#db4444;border:1px solid #db4444;}
 .category-flex ul li:first-child :is(i,span){color:#fff;}
-.selling-products-container{width:90%;margin:0 auto;}
-
 .quantity-btn-container{width:100%;justify-content:space-between;position:absolute;bottom:0;align-items:center;background-color:#000;}
 .quantity-btn-container{padding:5px 20px;display:none;border-radius:0 0 4px 4px;}
+.quantity-btn-container button{background-color:#fff;box-shadow:0px 0px 5px 1px #fff;}
 .quantity-btn-container button{padding:5px 8px;font-weight:500;font-family:'Inter';font-size:1rem;border:none;border-radius:4px;cursor:pointer;}
 .quantity-btn-container span{color:#fff;font-size:1rem;cursor:pointer;font-family:'Inter';font-weight:500;}
-.add-to-cart-btn.hide{display:none;}
+.add-to-cart-btn.hide{display:block;}
 .quantity-btn-container.show{display:flex;}
-
-
+.add-to-cart-btn{display:none;opacity:0;}
+.product-image-card:hover .add-to-cart-btn{display:block;opacity:1;}
+.add-to-cart-btn{animation:animatebtn .2s ease-in-out forwards;}
+@keyframes animatebtn {
+    0%{bottom:-5px;}
+    100%{bottom:0px;}
+}
 @media screen and (max-width:768px){
     .hero-section-container{flex-direction:column;width:100%;}
     .side-menu-container{border-right:none;grid-template-columns:initial;padding:0px;background-color:#000;}
@@ -115,7 +117,6 @@
     .time-countdown div p:first-child{font-size:.85rem;}
     .side-menu.display{display:block;}
     .flex-products{gap:35px 10px;grid-template-columns:repeat(auto-fill,minmax(calc(250px / 2),1fr));}
-    /* .add-to-cart-btn{visibility:visible;} */
     .quantity-btn-container button{font-size:.85rem;padding:3px 6px;}
     .add-to-cart-btn{font-size:.85rem;padding:8px 0;}
     .category-flex ul{grid-template-columns:repeat(auto-fill,minmax(60px,1fr));gap:10px;}
@@ -125,4 +126,5 @@
     .flashsale-header{align-items:start;gap:5px 0;}
     .container :is(.flashsale-header, .browse-category, .selling-product){margin-top:10px;}
     .container :is(.today-container, .category-head, .selling-head){gap:0 10px;}
+    .add-to-cart-btn{display:block;opacity:1;}
 }
