--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -58,7 +58,7 @@
 .wishlist-btn{padding:7px;border-radius:50%;border:none;background-color:#fff;position:absolute;top:7%;right:7%;cursor:pointer;}
 .wishlist-btn i{font-size:1.5rem;color:#db4444;}
 .product-image-card{width:100%;aspect-ratio:1;}
-.image-product-card{width:100%;padding:20px 30px;}
+.image-product-card{width:100%;padding:20px 30px;height:100%;}
 .add-to-cart-btn{width:100%;padding:10px 0;color:#fff;font-weight:500;font-family:'Inter';font-size:1rem;background-color:#000;border-radius:0 0 4px 4px;}
 .product-image-card img{width:100%;aspect-ratio:1;object-fit:contain;}
 .product-discount{position:absolute;top:7%;left:7%;}
