added just for you container

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -98,7 +98,7 @@
                                 #heart 
                                 class="fa-regular fa-heart" 
                                 [attr.data-id]="product.id"
-                                (click)="getProduct(productContainer,product)"></i>
+                                (click)="addProductToWishList(productContainer,product)"></i>
                             </button>
                         </div>
                         <div class="product-description">
@@ -175,7 +175,7 @@
                                     #heart 
                                     class="fa-regular fa-heart" 
                                     [attr.data-id]="product.id"
-                                    (click)="getProduct(productContainer,product)"></i>
+                                    (click)="addProductToWishList(productContainer,product)"></i>
                                 </button>
                             </div>
                             <div class="product-description">
@@ -232,7 +232,7 @@
                                     #heart 
                                     class="fa-regular fa-heart" 
                                     [attr.data-id]="product.id"
-                                    (click)="getProduct(productContainer,product)"></i>
+                                    (click)="addProductToWishList(productContainer,product)"></i>
                                 </button>
                             </div>
                             <div class="product-description">
