--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -61,7 +61,7 @@
 .image-product-card{width:100%;padding:20px 30px;height:100%;}
 .add-to-cart-btn{width:100%;padding:10px 0;color:#fff;font-weight:500;font-family:'Inter';font-size:1rem;background-color:#000;border-radius:0 0 4px 4px;}
 .product-image-card img{width:100%;aspect-ratio:1;object-fit:contain;}
-.product-discount{position:absolute;top:7%;left:7%;}
+.product-discount{position:absolute;top:7%;left:7%;z-index:1;}
 .product-discount{background-color:#db4444;padding:4px 14px;border-radius:4px;display:flex;align-items:center;justify-content:center;}
 .product-discount p{text-align:center;color:#fff;font-size:.9rem;}
 .product-description{display:flex;flex-direction:column;gap:5px 0;margin-top:15px;}
