--- a/src/app/wishlist/wishlist.component.css
+++ b/src/app/wishlist/wishlist.component.css
@@ -5,7 +5,6 @@
 .move-btn-header button{padding:8px 30px;border:1px solid #000;background-color:transparent;font-weight:500;font-family:'Inter';border-radius:4px;font-size:.8rem;}
 .empty-wishlist-card{margin-top:50px;}
 .empty-wishlist-card p{text-align:center;font-size:3rem;font-weight:600;}
-
 .flashsale-product-container{margin-top:50px;}
 .flashsale-products{display:grid;grid-template-columns:repeat(auto-fill,minmax(250px,1fr));flex-wrap:wrap;gap:20px 30px;}
 .product-container{display:flex;flex-direction:column;justify-content:space-between;}
@@ -16,7 +15,7 @@
 .image-product-card{width:100%;padding:20px 30px;}
 .add-to-cart-btn{width:100%;padding:10px 0;color:#fff;font-weight:500;font-family:'Inter';font-size:1rem;background-color:#000;border-radius:0 0 4px 4px;}
 .product-image-card img{width:100%;aspect-ratio:1;object-fit:contain;}
-.product-discount{position:absolute;top:7%;left:7%;}
+.product-discount{position:absolute;top:7%;left:7%;z-index:1;}
 .product-discount{background-color:#db4444;padding:4px 14px;border-radius:4px;display:flex;align-items:center;justify-content:center;}
 .product-discount p{text-align:center;color:#fff;font-size:.9rem;}
 .product-description{display:flex;flex-direction:column;gap:5px 0;margin-top:15px;}
@@ -32,6 +31,12 @@
 
 .product-image-card{position:relative;}
 .add-to-cart-btn{position:absolute;bottom:0;border:none;cursor:pointer;}
+
+.for-you-products-container :is(.product-head *){color:#db4444;}
+.for-you-products-container :is(.product-head){display:flex;align-items:center;gap:0 20px;}
+.for-you-products-container :is(.product-box){width:20px;height:40px;border-radius:4px;background-color:#db4444;}
+.for-you-products-container :is(.product-head span){font-weight:600;}
+.for-you-products-container{margin-top:50px;}
 
 @media screen and (max-width:768px) {
     .flashsale-products{gap:35px 10px;grid-template-columns:repeat(auto-fill,minmax(calc(250px / 2),1fr));}
