added product component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
         <div class="footer-flex">
             <div class="footer footer-icon">
                 <div class="footer-logo">
-                    <p class="logo-footer">aboShopify</p>
+                    <p class="logo-footer">aboMart</p>
                     <div class="footer-subscribe">
                         <p>Subscribe</p>
                         <p>Get 10% off your first order</p>
